--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongodb": "^3.1.0-beta4",
+    "mongoose": "^5.1.6",
+    "morgan": "^1.9.0",
     "unsplash-js": "^4.8.0"
   },
   "devDependencies": {},
